--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/sayim.jpg" type="image/x-icon">
 </head>
 <body>
-    
+<section>
+    <div class="half">
+        <h1>Welcome To</h1>
+        <h1><span class="orange">Himel Hasans</span> World</h1>
+        <h3>Web Designer and Programmer</h3>
+        <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur omnis voluptate. Cum deserunt quia cumque incidunt sint esse, laudantium dignissimos adipisci praesentium cupiditate debitis voluptate, unde earum reiciendis ab?</p>
+        <a target="_blank" href="https://www.linkedin.com/in/sayim007/">HIRE ME</a>
+        </div>
+        <div class="half">
+            <img src="Images/sayim.jpg" alt="Himel Hasans Photo"> 
+        </div>
+</section>
 </body>
 </html>
