first part done

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="shortcut icon" href="images/sayim.jpg" type="image/x-icon">
 </head>
 <body>
-<section>
+<section class="top">
     <div class="half">
         <h1>Welcome To</h1>
         <h1><span class="orange">Himel Hasans</span> World</h1>
         <h3>Web Designer and Programmer</h3>
         <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequuntur omnis voluptate. Cum deserunt quia cumque incidunt sint esse, laudantium dignissimos adipisci praesentium cupiditate debitis voluptate, unde earum reiciendis ab?</p>
-        <a target="_blank" href="https://www.linkedin.com/in/sayim007/">HIRE ME</a>
+        <a class="link" target="_blank" href="https://www.linkedin.com/in/sayim007/">HIRE ME</a>
         </div>
         <div class="half">
             <img src="Images/sayim.jpg" alt="Himel Hasans Photo"> 
