--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
             <img src="Images/sayim.jpg" alt="Himel Hasans Photo"> 
         </div>
 </section>
+<section class="part2">
+    <div class="half">
+        <img src="Images/sayim001.jpg" alt=" Himel Hasans Photo">
+    </div>
+    <div class="half">
+        <h1>About <samp class="orange">Me</samp></h1>
+        <h3>Who Am I</h3>
+        <p class="pera">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus voluptatibus animi officia fugit deserunt aperiam tempore hic cum maxime cumque nam quo accusantium totam magni quae, optio ex illum molestiae.</p>
+        <a target="_blank" class="link" href="https://www.facebook.com/sayim007">My Facebook Profile</a>
+    </div>
+</section>
 </body>
 </html>
