--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="images/sayim.jpg" type="image/x-icon">
 </head>
 <body>
-<section class="top">
+<section class="top section">
     <div class="half">
         <h1>Welcome To</h1>
         <h1><span class="orange">Himel Hasans</span> World</h1>
@@ -24,7 +24,7 @@
             <img src="Images/sayim.jpg" alt="Himel Hasans Photo"> 
         </div>
 </section>
-<section class="part2">
+<section class="part2 section">
     <div class="half">
         <img src="Images/sayim001.jpg" alt=" Himel Hasans Photo">
     </div>
@@ -36,10 +36,20 @@
     </div>
 </section>
 <section class="part3">
-<h1>Experirnces</h1>
-<div>
-    <h1>Full Stack Web Developer</h1>
-    <h3 class="orange">2022-present.Pro Level Developer</h3>
+    <h1>Experirnces</h1>
+<div class="section">
+    <div class="half">
+        <h1>Full Stack Web Developer</h1>
+        <h3 class="orange">2022-present.Pro Level Developer</h3>
+        <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni debitis doloremque sit expedita aliquid. Est sapiente quas cum incidunt ea, saepe tempore blanditiis at beatae dicta quae quibusdam magni! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa repellat blanditiis, perspiciatis enim, saepe similique autem eveniet quisquam dolor modi neque molestiae tempora vitae alias impedit consequatur laboriosam expedita magni.</p>
+    </div>
+    <div class="half">
+        <h1>Begainaer Level</h1>
+        <h3 class="orange">My Starting</h3>
+        <p class="pera">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est explicabo possimus, quia nostrum molestias maxime hic aut exercitationem! Dolorem recusandae ut consectetur culpa nobis omnis, delectus a perspiciatis excepturi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id perspiciatis ducimus dolorum quae, est nihil, neque nostrum mollitia beatae consequuntur, reiciendis veritatis hic. Debitis autem consequuntur quam impedit quidem?
+        </p>
+    </div>
 </div>
 </section>
 </body>
