--- a/index.html
+++ b/index.html
@@ -38,19 +38,22 @@
 <section class="part3">
     <h1>Experirnces</h1>
 <div class="section">
-    <div class="half">
+    <div id="side-bar1" class="half expriences">
         <h1>Full Stack Web Developer</h1>
         <h3 class="orange">2022-present.Pro Level Developer</h3>
-        <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni debitis doloremque sit expedita aliquid. Est sapiente quas cum incidunt ea, saepe tempore blanditiis at beatae dicta quae quibusdam magni! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa repellat blanditiis, perspiciatis enim, saepe similique autem eveniet quisquam dolor modi neque molestiae tempora vitae alias impedit consequatur laboriosam expedita magni.</p>
+        <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni debitis doloremque sit expedita aliquid. Est sapiente quas cum incidunt ea, saepe tempore blanditiis at beatae dicta quae.</p>
     </div>
-    <div class="half">
+    <div id="side-bar2" class="half expriences">
         <h1>Begainaer Level</h1>
         <h3 class="orange">My Starting</h3>
         <p class="pera">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est explicabo possimus, quia nostrum molestias maxime hic aut exercitationem! Dolorem recusandae ut consectetur culpa nobis omnis, delectus a perspiciatis excepturi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id perspiciatis ducimus dolorum quae, est nihil, neque nostrum mollitia beatae consequuntur, reiciendis veritatis hic. Debitis autem consequuntur quam impedit quidem?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est explicabo possimus, quia nostrum molestias maxime hic aut exercitationem! Dolorem recusandae ut consectetur culpa nobis omnis.
         </p>
     </div>
 </div>
 </section>
+<footer>
+   <p class="orange">© Himel Hasan 2022</p> 
+</footer>
 </body>
 </html>
